--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 @echo off
 cls
 
@@ -102,18 +101,27 @@ ping localhost -n 1 >nul
 
 cls
 echo What's your name adventurer?
-set /p name=
+set /p name
 goto story
 
 :story
+echo Rigna: Ahh
+ping localhost -n 1 >nul
+cls
+echo Rigna: Ahh welcome
+ping localhost -n 1 >nul
+cls
 echo Rigna: Ahh welcome %name%.
 ping localhost -n 2.5 >nul
-echo Rigna: So who are you?
+echo Rigna: So what are you?
 ping loclahost -n 1 >nul
+color 0a
 echo 1) Are you an elf?
 ping loclahost -n 1 >nul
+color 0b
 echo 2) Are you a human?
 ping loclahost -n 1 >nul
+color 04
 echo 3) Are you a dwarf?
 
 if %number% == 1 goto elf
