--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 @echo off
 cls
 
@@ -110,6 +109,7 @@ echo Rigna: Ahh welcome %name%.
 ping localhost -n 2.5 >nul
 echo Rigna: So who are you?
 ping loclahost -n 1 >nul
+
 echo 1) Are you an elf?
 ping loclahost -n 1 >nul
 echo 2) Are you a human?
@@ -119,4 +119,5 @@ echo 3) Are you a dwarf?
 if %number% == 1 goto elf
 if %number% == 2 goto human
 if %number% == 3 goto dwarf
+goto story
 
